<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="mlh-bm-e6S">
    <device id="retina6_1" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--TinyUrl-->
        <scene sceneID="gYk-kX-NA1">
            <objects>
                <viewController title="TinyUrl" id="py7-HG-gw9" customClass="HomeViewController" customModule="owt_tiny_mvvm" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="k3S-ci-MBi">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No result, please transform your url with the &quot;+&quot; button" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yd1-hf-MiO">
                                <rect key="frame" x="20" y="367" width="374" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="TAZ-CX-OmR"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6vC-gt-tBL">
                                <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            </tableView>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <constraints>
                            <constraint firstItem="6vC-gt-tBL" firstAttribute="top" secondItem="Gaw-Hh-pxR" secondAttribute="top" id="EQZ-wN-APD"/>
                            <constraint firstAttribute="trailing" secondItem="yd1-hf-MiO" secondAttribute="trailing" constant="20" id="Hdi-tD-wvb"/>
                            <constraint firstItem="yd1-hf-MiO" firstAttribute="centerX" secondItem="Gaw-Hh-pxR" secondAttribute="centerX" id="Jpz-do-csX"/>
                            <constraint firstItem="yd1-hf-MiO" firstAttribute="centerY" secondItem="Gaw-Hh-pxR" secondAttribute="centerY" constant="5" id="Noh-Qg-9HN"/>
                            <constraint firstItem="yd1-hf-MiO" firstAttribute="leading" secondItem="Gaw-Hh-pxR" secondAttribute="leading" constant="20" id="PCU-pv-UHl"/>
                            <constraint firstItem="Gaw-Hh-pxR" firstAttribute="bottom" secondItem="6vC-gt-tBL" secondAttribute="bottom" id="XjU-UD-l9O"/>
                            <constraint firstItem="Gaw-Hh-pxR" firstAttribute="trailing" secondItem="6vC-gt-tBL" secondAttribute="trailing" id="mGK-4K-XH3"/>
                            <constraint firstItem="6vC-gt-tBL" firstAttribute="leading" secondItem="k3S-ci-MBi" secondAttribute="leading" id="mhD-tQ-aB9"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="Gaw-Hh-pxR"/>
                    </view>
                    <navigationItem key="navigationItem" largeTitleDisplayMode="always" id="2lI-wi-1Kj">
                        <barButtonItem key="rightBarButtonItem" title="Item" image="add" id="4F0-hv-rUz">
                            <color key="tintColor" red="0.86793524030000002" green="0.41489198799999999" blue="0.21561264990000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                            <connections>
                                <segue destination="F1J-1H-E69" kind="show" id="9Jk-gL-iQY"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
                        <outlet property="emptyLabel" destination="yd1-hf-MiO" id="jfb-YC-x8H"/>
                        <outlet property="tableView" destination="6vC-gt-tBL" id="ctV-ny-jul"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Bqd-17-VYA" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="58" y="-119"/>
        </scene>
        <!--Create Tiny Url View Controller-->
        <scene sceneID="FfE-Bg-f5g">
            <objects>
                <viewController id="F1J-1H-E69" customClass="CreateTinyUrlViewController" customModule="owt_tiny_mvvm" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="0L0-96-xOQ">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="anB-oC-chg">
                                <rect key="frame" x="20" y="121" width="374" height="44"/>
                                <color key="backgroundColor" red="0.86793524030000002" green="0.41489198799999999" blue="0.21561264990000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="Zb2-qR-Rd0"/>
                                </constraints>
                                <state key="normal" title="Transform URL">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="transformUrlAction:" destination="F1J-1H-E69" eventType="touchUpInside" id="XDf-IZ-PiI"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Paste long Url" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="C45-7z-cm2">
                                <rect key="frame" x="20" y="40" width="374" height="34"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="34" id="EfI-t2-hJX"/>
                                </constraints>
                                <color key="textColor" red="0.085005499422550201" green="0.18239670991897583" blue="0.26275521516799927" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no"/>
                            </textField>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fgR-fT-Q1n">
                                <rect key="frame" x="20" y="80" width="374" height="1"/>
                                <color key="backgroundColor" red="0.17910068379887217" green="0.39041484976573243" blue="0.56682802608170491" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="1" id="DQy-ri-CVk"/>
                                </constraints>
                            </view>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <constraints>
                            <constraint firstItem="anB-oC-chg" firstAttribute="top" secondItem="fgR-fT-Q1n" secondAttribute="bottom" constant="40" id="N6t-bV-3KD"/>
                            <constraint firstItem="C45-7z-cm2" firstAttribute="top" secondItem="Mw8-np-i4y" secondAttribute="top" constant="40" id="RWe-vP-uze"/>
                            <constraint firstItem="C45-7z-cm2" firstAttribute="leading" secondItem="Mw8-np-i4y" secondAttribute="leading" constant="20" id="Wg8-HE-RB5"/>
                            <constraint firstItem="fgR-fT-Q1n" firstAttribute="top" secondItem="C45-7z-cm2" secondAttribute="bottom" constant="6" id="bKf-gb-Fem"/>
                            <constraint firstItem="Mw8-np-i4y" firstAttribute="trailing" secondItem="anB-oC-chg" secondAttribute="trailing" constant="20" id="bQq-wN-9tB"/>
                            <constraint firstItem="fgR-fT-Q1n" firstAttribute="leading" secondItem="0L0-96-xOQ" secondAttribute="leadingMargin" id="fYG-RS-Ifq"/>
                            <constraint firstItem="anB-oC-chg" firstAttribute="leading" secondItem="Mw8-np-i4y" secondAttribute="leading" constant="20" id="j0S-fS-c6P"/>
                            <constraint firstItem="Mw8-np-i4y" firstAttribute="trailing" secondItem="C45-7z-cm2" secondAttribute="trailing" constant="20" id="luV-H4-EG5"/>
                            <constraint firstAttribute="trailingMargin" secondItem="fgR-fT-Q1n" secondAttribute="trailing" id="yFS-Qf-vgj"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="Mw8-np-i4y"/>
                    </view>
                    <connections>
                        <outlet property="urlTextField" destination="C45-7z-cm2" id="JMt-aN-kFZ"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="d5x-gs-p64" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="824.63768115942037" y="-120.53571428571428"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="hfA-PZ-AMy">
            <objects>
                <navigationController id="mlh-bm-e6S" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="BUx-Ig-7Vq">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <color key="barTintColor" red="0.085005499422550201" green="0.18239670991897583" blue="0.26275521516799927" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                    </navigationBar>
                    <connections>
                        <segue destination="py7-HG-gw9" kind="relationship" relationship="rootViewController" id="KO8-zx-rWR"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="CUg-8F-Fbk" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-784" y="-119"/>
        </scene>
    </scenes>
    <resources>
        <image name="add" width="22" height="22"/>
    </resources>
</document>
